data/derived/comb/progs/unify/prog1527.ml.out
Characters 82-83:
  (fb,fb=b') in f b) ,b);;
                      ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
